--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,12 @@ p.menu-item-details {
   div.navbar-header {
     height: 140px;
   }
+  div .row {
+    text-align: center;
+  }
+  div .menu-item-photo {
+    margin-left: 100px;
+  }
   /* End Home Page */
 }
 
